# sirena-ibp

./: .gitignore  .python-version  README.md  noxfile.py  prueba_sint_canonization.py  pyproject.toml  singular.txt
.github/workflows/: publish.yml
benchmark/: benchmark.sh  benchmark_generation.py  params_abelian.txt  params_sample.txt  times.txt
benchmark/inputs/: abelian_fermion_3loop.txt  abelian_higgs_mass.txt  sample_2loop.txt
inputs/: A0A0_g2lmbd2.txt  fermion_test.txt  params.txt  quartic_sim_yukawa.txt  quartic_sm.txt  result.txt  smeft.txt  test.txt  test_4loop.txt  yukawa_3loop.txt
outputs/: fermion_test.txt  output_3.12.txt
src/sirena/: __init__.py  global_precomputed_functions.py  ibp_generation.py  ibp_sols_handling.py  ibp_system_handling.py  in_out_utils.py  main.py  reduction.py  seed_generation.py  setup.py  sint_canonization.py  sint_utils.py
src/sirena/cpp/: CMakeLists.txt
src/sirena/cpp/includes/: FlintPoly.hpp
src/sirena/cpp/src/: ibp_solver.cpp  ibp_solver_num.cpp
src/sirena/examples/: A0A0_g4lmbd.txt  A0A0_g6.txt  bm1_f2l.txt  params.txt  phiphi_g4lmbd.txt  test_4loop.txt  yukawa_3loop.txt
src/sirena/examples/inputs/: sample_2loop.txt
src/sirena/examples/params/: params_abelian.txt
