[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "sirena-ibp"
version = "0.0.1a2"
description = "Sum-Integral REductioN Algorithm"
authors = [
    { name="Luis Gil", email="lgil@ugr.es"},
    { name="Javier lópez Miras", email="jlmiras@ugr.es"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "sympy",
    "scipy",
    "numba",
    "python-flint"
]

[tool.setuptools.package-data]
sirena = ["examples/*"]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.source-dir = "src/sirena/cpp"
cmake.verbose = true

[tool.scikit-build.wheel]
packages = ["src/sirena"]

[project.scripts]
sirena = "sirena.main:main"

[project.optional-dependencies]
notebook = [
    "ipykernel",
    "jupyter",
    "matplotlib", 
    "tqdm"       
]


